bug overflow and ui scrolling risolto

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
 body {
     background: linear-gradient(to top, #dcdbd3 80%, #009688 80%, #009688 100%);
-    max-height: 100;
-
+    height: 100vh;
     /* font */
     font-family: 'Roboto', sans-serif;
+    z-index: -1;
 }
 
 main {
     /* test */
     background-color: white;
+
+    z-index: 1;
 }
 
 /* ICONS */
@@ -58,6 +60,8 @@ main {
 /* SEARCH-BAR */
 #search-bar {
     font-size: .8rem;
+    overflow: hidden;
+    max-height: 100px;
 }
 
 
@@ -89,6 +93,7 @@ main {
 
 .contact-list-container {
     overflow-y: auto;
+    max-height: 100%;
 }
 
 .contact-list-box {
@@ -130,4 +135,5 @@ main {
 #chat-display {
     background-image: url(../img/mine.jpg);
     background-size: fill;
+    height: calc(100% - 82px);
 }
